<resources>
	<string name="app_name">MobMonkey</string>
	<string name="menu_settings">Settings</string>
	<string name="app_id_facebook">160583530745361</string>
	<string name="app_google_api_key0">AIzaSyCLKPK_nHrx7d8wWl3cWCUtnQGVXnmHkYQ</string>
	<string name="ad_title_enable_gps">Enable GPS</string>
	<string name="ad_title_no_location">Location unavailable</string>
	<string name="ad_title_no_gps_warning">Warning</string>
	<string name="ad_message_enable_gps">GPS not enabled, enable GPS to use MobMonkey?</string>
	<string name="ad_message_no_location">GPS location is currently unavailable, some features may not be accessible</string>
	<string name="ad_message_no_gps">You have not enabled GPS, some features are not accessible.</string>
	<string name="ad_btn_yes">Yes</string>
	<string name="ad_btn_no">No</string>
	<string name="ad_title_no_internet_access">No internet access</string>
	<string name="ad_message_no_internet_access">You have no internet access at the moment, cannot start MobMonkey</string>
	<string name="tv_title_sign_in">Sign In</string>
	<string name="et_hint_emailaddress">Email Address</string>
	<string name="et_hint_password">Password</string>
	<string name="btn_sign_in_facebook">Sign In with Facebook</string>
	<string name="btn_sign_in_twitter">Sign In with Twitter</string>
	<string name="btn_sign_up">Sign Up</string>
	<string name="pd_launch_twitter_auth_screen">Launching Twitter authentication screen&#8230;</string>
	<string name="pd_signing_in">Signing in&#8230;</string>
	<string name="pd_signing_in_facebook">Signing in via Facebook&#8230;</string>
	<string name="pd_signing_in_twitter">Signing in via Twitter&#8230;</string>
	<string name="toast_connection_timed_out">Connection to MobMonkey server has timed out, please try again later.</string>
	<string name="toast_new_twitter_user">New Twitter user, please sign up with your user info</string>
	<string name="toast_sign_in_successful">Successfully signed in</string>
	<string name="et_hint_firstname">First Name</string>
	<string name="et_hint_lastname">Last Name</string>
	<string name="et_hint_passwordconfirm">Confirm Password</string>
	<string name="et_hint_birthdate">Birthdate</string>
	<string name="et_hint_gender">Gender</string>
	<string name="cb_agree_tos">I accept the terms of use</string>
	<string name="btn_sign_up_facebook">Sign Up With Facebook</string>
	<string name="btn_sign_up_twitter">Sign Up With Twitter</string>
	<string name="ad_title_birthdate">Please select your birthdate</string>
	<string name="ad_title_gender">Gender</string>
	<string name="ad_btn_choose">Choose</string>
	<string name="ad_btn_cancel">Cancel</string>
	<string-array name="ad_list_gender">
	    <item>Male</item>
	    <item>Female</item>
	</string-array>
	<string name="ad_message_invalid_first_name">Please enter your first name.</string>
	<string name="ad_message_invalid_last_name">Please enter your last name.</string>
	<string name="ad_message_invalid_email_address">Please enter your email address.</string>
	<string name="ad_message_invalid_password">Please enter your password</string>
	<string name="ad_message_invalid_password_not_match">The passwords you have entered do not match, please re-enter your password.</string>
	<string name="ad_message_invalid_birthdate">Please enter your birthdate.</string>
	<string name="ad_message_invalid_gender">Please select your gender.</string>
	<string name="ad_message_invalid_tos">Terms of Service must be accepted before signing up.</string>
	<string name="pd_signing_up">Signing up&#8230;</string>
	<string name="pd_signing_up_facebook">Signing up with Facebook&#8230;</string>
	<string name="toast_sign_up_in_successful">User already exist, successfully signed in</string>
	<string name="toast_sign_up_successful">Successfully signed up</string>
	<string name="pd_signing_up_twitter">Signing up via Twitter&#8230;</string>
	<string name="pd_loading">Loading&#8230;</string>
	<string name="toast_not_enable_gps">GPS was not enabled</string>
	<string name="toast_no_gps_access">You have no GPS access at the moment, cannot start MobMonkey</string>
	<string name="tv_title_trendingnow">What\'s Trending Now!</string>
	<string-array name="trending_category">
		<item>Favorites</item>
		<item>My Interests</item>
		<item>Top Viewed</item>
		<item>Near Me</item>
	</string-array>
	<string name="tv_title_top_viewed">Top Viewed</string>
	<string name="pd_retrieving_all_top_viewed">Retrieving all top viewed&#8230;</string>
	<string name="tv_title_inbox">Inbox</string>
	<string-array name="inbox_category">
	    <item>Open Requests</item>
	    <item>Answered Requests</item>
	    <item>Assigned Requests</item>
	    <item>Notifications</item>
	</string-array>
	<string name="tv_title_openrequests">Open Requests</string>
	<string name="pd_retrieving_all_open_requests">Retrieving all open requests&#8230;</string>
	<string name="pd_deleting_request">Deleting request&#8230;</string>
	<string name="ad_btn_delete">Delete</string>
	<string name="ad_title_delete_request">Open Request</string>
	<string name="ad_message_delete_request">Delete request?</string>
	<string name="toast_request">Request</string>
	<string name="tv_title_answeredrequests">Answered Requests</string>
	<string name="ad_title_no_more_answered_requests">No More Answered Requests</string>
	<string name="ad_message_no_more_answered_requests">There are no more answered requests.</string>
	<string name="pd_accepting_answered_request">Accepting answered request&#8230;</string>
	<string name="pd_rejecting_answered_request">Rejecting answered request&#8230;</string>
	<string name="tv_title_assignedrequests">Assigned Requests</string>
	<string name="ad_title_no_more_assigned_requests">No More Assigned Requests</string>
	<string name="ad_message_no_more_assigned_requests">There are no more assigned requests at this location.</string>
	<string name="pd_retrieving_assigned_requests">Retrieving assigned requests&#8230;</string>
	<string name="pd_uploading_image">Uploading image&#8230;</string>
	<string name="pd_uploading_video">Uploading video&#8230;</string>
	<string name="toast_uploaded_assigned_request">Successfully uploaded assigned request.</string>
	<string name="toast_failed_upload_assigned_request">Failed to upload assigned request.</string>
	<string name="ad_title_camera_error">Camera Error</string>
	<string name="ad_message_camera_error">Unable to open or no back-facing camera.</string>
	<string name="ad_title_video_recording_error">Video Recording Error</string>
	<string name="ad_message_video_recording_error">Unable to begin video recording</string>
	<string name="btn_record">Record</string>
	<string name="btn_stop">Stop</string>
	<string name="tv_title_search_locations">Search Locations</string>
	<string name="tv_create_hot_spot">Create Hot Spot</string>
	<string name="tv_nearby">Nearby</string>
	<string name="tv_load_more">Load More</string>
	<string name="tv_hold_to_enable_pan_and_zoom">Hold to Enable Pan and Zoom</string>
	<string name="tv_hold_to_disable_pan_and_zoom">Hold to Disable Pan and Zoom</string>
	<string name="tv_or">OR</string>
	<string name="btn_add_a_location">Add a Location</string>
	<string name="et_hint_search">Search</string>
	<string name="et_hint_city_state">City, State</string>
	<string name="et_hint_zip_code">Zip Code</string>
	<string-array name="array_search">
	    <item>My History</item>
	    <item>Search by Category</item>
	</string-array>
	<string name="ad_message_no_locations_found">No locations found</string>
	<string name="pd_search_all_nearby">Searching all nearby&#8230;</string>
	<string name="pd_search_for">Searching for</string>
	<string name="pd_ellipses">&#8230;</string>
	<string name="pd_locating">Locating</string>
	<string name="tv_title_master_location">Master Location</string>
	<string name="tv_choose_hot_spot">Choose the Hot Spot Location</string>
	<string name="tv_title_existing_hot_spots">Existing Hot Spots</string>
	<string name="tv_existing_hot_spots">Existing Hot Spots</string>
	<string name="btn_create_hot_hyphen_spot">Create Hot&#8211;Spot</string>
	<string name="tv_title_new_hot_spot">New Hot Spot</string>
	<string name="tv_use_current_location">Use Current Location</string>
	<string name="tv_tap_on_the_map">Tap on the map to select a manual location.</string>
	<string name="tv_hot_spot_details">Hot Spot Details</string>
	<string name="tv_new_hot_spot">NEW HOT SPOT</string>
	<string name="et_hint_name">Name</string>
	<string name="et_hint_description">Description</string>
	<string name="et_hint_range">Range</string>
	<string name="et_text_meters">meters</string>
	<string name="btn_create_hot_spot">Create Hot Spot</string>
	<string name="ad_message_empty_name">Each Hot Spot mush have a name.</string>
	<string name="ad_message_empty_range">Each Hot Spot mush have a range.</string>
	<string name="toast_error_create_hot_spot">An error has occurred while creating hot spot, please try again later.</string>
	<string name="pd_creating_hot_spot">Creating Hot Spot&#8230;</string>
	<string name="tv_select_a_range">Select a Range</string>
	<string name="btn_five_meters">5 meters</string>
	<string name="btn_ten_meters">10 meters</string>
	<string name="btn_thirty_meters">30 meters</string>
	<string name="btn_fifty_meters">50 meters</string>
	<string name="btn_hundred_meters">100 meters</string>
	<string name="btn_clear">Clear</string>
	<string name="tv_title_history">History</string>
	<string name="ad_title_no_history">No history</string>
	<string name="ad_title_clear_history">Clear history</string>
	<string name="ad_title_remove_history">Remove history</string>
	<string name="ad_message_no_history">No history available</string>
	<string name="ad_message_clear_history">Clear entire history?</string>
	<string name="ad_message_remove">Remove \'</string>
	<string name="ad_message_from_history">\' from history?</string>
	<string name="ad_btn_ok">OK</string>
	<string name="tv_title_categories">Categories</string>
	<string name="btn_add_loc">+</string>
	<string name="toast_unable_to_load_categories">Unable to load categories</string>
	<string name="tv_title_all_nearby">All Nearby</string>
	<string name="miles">miles</string>
	<string name="tv_title_hot_spot">HOT SPOT:</string>
	<string name="tv_make_request">Make a Request</string>
	<string name="tv_finding_members">Finding Members&#8230;</string>
	<string name="tv_no_members_found">No members found</string>
	<string name="tv_members_found">members found</string>
	<string name="tv_location_information">Location Information</string>
	<string name="tv_no_phone_number_available">No Phone Number Available</string>
	<string name="tv_hot_spots">Hot Spots</string>
	<string name="tv_add_notifications">Add Notifications</string>
	<string name="tv_add_to_favorites">Add to Favorites</string>
	<string name="tv_remove_from_favorites">Remove from Favorites</string>
	<string name="ad_title_confirm_delete">Confirm Delete</string>
	<string name="ad_message_delete_hot_spot">Are your sure you want to delete this Hot Spot \'</string>
	<string name="ad_message_delete_hot_spot_question_mark">\'?</string>
	<string name="tv_notify_me">Notify me of activity at</string>
	<string name="tv_this_location">this location</string>
	<string name="et_hint_new_password">New Password</string>
	<string name="et_hint_confirm_password">Confirm Password</string>
	<string name="tv_title_my_info">My Info</string>
	<string name="btn_save">Save</string>
	<string name="tv_title_add_location">Add Location</string>
	<string name="et_hint_location_name">Name</string>
	<string name="et_hint_location_categories">Categories</string>
	<string name="et_hint_location_street">Street</string>
	<string name="et_hint_location_city">City</string>
	<string name="et_hint_location_state">State</string>
	<string name="et_hint_location_zip">Zip</string>
	<string name="et_hint_location_phone">Phone Number (optional)</string>
	<string name="btn_add_location">Add Location</string>
	<string name="btn_done">Done</string>
</resources>