<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/backgroundcolor" 
	android:orientation="vertical"
	android:scrollbars="vertical">
   
   	<RelativeLayout android:layout_width="match_parent"
		android:layout_height="50dp"
		android:background="@drawable/navigation_bar">
	    
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:text="@string/tv_title_my_info"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textColor="@android:color/white"
			android:textStyle="bold"/>
	    
		<Button android:id="@+id/btnsave"
		    android:layout_width="wrap_content"
		    android:layout_height="33dp"
			android:layout_alignParentRight="true"
			android:layout_centerVertical="true"
		    android:layout_marginRight="5dp"
		    android:background="@drawable/nav_bar_button_blank"
		    android:paddingLeft="5dp"
		    android:paddingRight="5dp"
		    android:paddingBottom="4dp"
		    android:text="@string/btn_save"
		    android:textStyle="bold"
			android:textColor="@android:color/white"/>
	    
	</RelativeLayout>
	
	<ScrollView android:id="@+id/svmyinfo"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:clickable="true"
	    android:fillViewport="true"
	    android:focusable="true"
	    android:focusableInTouchMode="true"
	    android:longClickable="true" >
	
		<LinearLayout android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			
			<EditText android:id="@+id/etfirstname"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="15dp"
				android:layout_marginLeft="20dp"
				android:layout_marginRight="20dp"
				android:hint="@string/et_hint_firstname"
				android:inputType="text"/>
				
			<EditText android:id="@+id/etlastname"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="20dp"
				android:layout_marginRight="20dp"
				android:hint="@string/et_hint_lastname"
				android:inputType="text"/>
				
			<EditText android:id="@+id/etemailaddress"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="20dp"
				android:layout_marginRight="20dp"
				android:hint="@string/et_hint_emailaddress"
				android:inputType="textEmailAddress"/>
			
			<EditText android:id="@+id/etnewpassword"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="20dp"
				android:layout_marginRight="20dp"
				android:hint="@string/et_hint_new_password"
				android:inputType="textPassword"/>
			
			<EditText android:id="@+id/etconfirmpassword"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="20dp"
				android:layout_marginRight="20dp"
				android:hint="@string/et_hint_confirm_password"
				android:inputType="textPassword"/>
					
			<EditText android:id="@+id/etbirthdate"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="20dp"
				android:layout_marginRight="20dp"
				android:hint="@string/et_hint_birthdate"
				android:editable="false"/>
			
			<EditText android:id="@+id/etgender"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="20dp"
				android:layout_marginRight="20dp"
				android:hint="@string/et_hint_gender"
				android:editable="false"/>
			
		</LinearLayout>
		
	</ScrollView>
	
</LinearLayout>