<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/backgroundcolor"
	android:orientation="vertical">
	
   	<TextView android:layout_width="match_parent"
		android:layout_height="50dp"
		android:layout_gravity="center"
		android:background="@drawable/navigation_bar"
		android:gravity="center"
		android:text="@string/tv_title_new_hot_spot"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:textColor="@android:color/white"
		android:textStyle="bold"/>
	
	<ScrollView android:id="@+id/svhotspotdetails"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent">
	    
		<LinearLayout android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="10dp">
    		
		    <LinearLayout android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal">
		        
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_vertical"
					android:layout_weight="1"
					android:text="@string/tv_use_current_location"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textColor="@android:color/black"/>
				
				<ToggleButton android:id="@+id/tbusecurrentlocation"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:checked="true"
				    android:clickable="false"/>
				
			</LinearLayout>
			
			<FrameLayout android:id="@+id/flnewhotspotmap"
				android:layout_width="match_parent"
				android:layout_height="200dp"/>
			
			<TextView android:id="@+id/tvtaponthemap"
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:layout_marginTop="5dp"
			    android:text="@string/tv_tap_on_the_map"/>
			
			<TextView android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="10dp"
   			    android:layout_marginBottom="5dp"
			    android:layout_marginLeft="5dp"
			    android:text="@string/tv_hot_spot_details"
   			    android:textAppearance="?android:attr/textAppearanceMedium"
			    android:textColor="@android:color/black"
			    android:textStyle="bold"/>
			
			<EditText android:id="@+id/etname"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:hint="@string/et_hint_name"
			    android:inputType="text"/>
			
			<EditText android:id="@+id/etdescription"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:hint="@string/et_hint_description"
			    android:inputType="text"/>
			
			<EditText android:id="@+id/etrange"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:hint="@string/et_hint_range"
			    android:editable="false"/>
			
			<Button android:id="@+id/btncreatehotspot"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="10dp"
    	        android:background="@drawable/orange_button_background"
			    android:paddingTop="15dp"
			    android:paddingBottom="15dp"
			    android:text="@string/btn_create_hot_spot"
			    android:textColor="@android:color/white"
			    android:textStyle="bold"/>
			
		</LinearLayout>
		
	</ScrollView>
	
</LinearLayout>