<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundcolor"
    android:orientation="vertical" >
    
   	<TextView android:layout_width="wrap_content"
		android:layout_height="50dip"
		android:layout_gravity="center"
		android:gravity="center"
		android:text="@string/tv_title_add_location"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:textColor="@android:color/white"
		android:textStyle="bold"
		android:background="@drawable/navigation_bar"/>
    
    <ScrollView android:layout_width="match_parent"
		android:layout_height="match_parent">
		
		<LinearLayout android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="10dp">
			
		    <EditText android:id="@+id/etlocationname"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:hint="@string/et_hint_location_name"
				android:inputType="text"
				android:maxLines="1"/>
		    
		    <EditText android:id="@+id/etcategories"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:hint="@string/et_hint_location_categories"
				android:inputType="text"
				android:maxLines="1"/>
		    
		    <LinearLayout android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dp"
		        android:background="@drawable/button_border"
		        android:orientation="horizontal"
		        android:padding="10dp">
		    
		        <TextView android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center_vertical"
		            android:layout_weight="1"
		            android:text="Add Address"
		            android:textAppearance="?android:attr/textAppearanceMedium"/>
		        
		        <ToggleButton android:id="@+id/tbaddaddress"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center_vertical"
		            android:checked="false"/>
		        
	        </LinearLayout>
	        
		    <LinearLayout android:id="@+id/lladdress"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical"
		        android:visibility="gone">
		    
		    	<EditText android:id="@+id/etstreet"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="10dp"
					android:hint="@string/et_hint_location_street"
					android:inputType="text"
					android:maxLines="1"/>
		    
		    	<EditText android:id="@+id/etcity"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="10dp"
					android:hint="@string/et_hint_location_city"
					android:inputType="text"
					android:maxLines="1"/>
		    
		    	<EditText android:id="@+id/etstate"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="10dp"
					android:hint="@string/et_hint_location_state"
					android:inputType="text"
					android:maxLines="1"/>
		    
			    <EditText android:id="@+id/etzip"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="10dp"
					android:hint="@string/et_hint_location_zip"
					android:inputType="text"
					android:maxLines="1"/>
		    
		    </LinearLayout>
		    
		    <EditText android:id="@+id/etphone"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:hint="@string/et_hint_location_phone"
				android:inputType="phone"
				android:maxLines="1"/>
		    
		    <Button android:id="@+id/btnaddlocation"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dp"
		        android:background="@drawable/orange_button_background"
		        android:onClick="viewOnClick"
		        android:text="@string/btn_add_location"
		        android:textColor="@android:color/white"
		        android:textStyle="bold" />
		    
	    </LinearLayout>
		    
    </ScrollView>

</LinearLayout>