<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/translucent_black"
	android:orientation="vertical">
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"/>
    
    <LinearLayout android:id="@+id/llactionsheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@android:color/background_dark"
        android:orientation="vertical"
        android:padding="20dp">
    
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
			android:layout_marginBottom="10dp"
	        android:text="@string/tv_select_a_range"
	        android:textColor="@android:color/white"/>
	    
		<Button android:id="@+id/btnfivemeters"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_five_meters"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="@android:color/black"
	        android:textStyle="bold"
	        android:onClick="viewOnClick"/>
	
		<Button android:id="@+id/btntenmeters"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_ten_meters"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="@android:color/black"
	        android:textStyle="bold"
	        android:onClick="viewOnClick"/>
		
		<Button android:id="@+id/btnthirtymeters"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_thirty_meters"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="@android:color/black"
	        android:textStyle="bold"
	        android:onClick="viewOnClick"/>
		
		<Button android:id="@+id/btnfiftymeters"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_fifty_meters"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="@android:color/black"
	        android:textStyle="bold"
	        android:onClick="viewOnClick"/>
		
		<Button android:id="@+id/btnhundredmeters"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_hundred_meters"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="@android:color/black"
	        android:textStyle="bold"
			android:onClick="viewOnClick"/>
		
		<Button android:id="@+id/btncancel"
		    android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="15dp"
	        android:text="@string/ad_btn_cancel"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="@android:color/white"
	        android:textStyle="bold"
	        android:onClick="viewOnClick"/>
	
	</LinearLayout>
    
</LinearLayout>