<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundcolor"
    android:orientation="vertical">
    
   	<RelativeLayout android:layout_width="match_parent"
		android:layout_height="50dp"
		android:background="@drawable/navigation_bar">
	    
	    <TextView android:id="@+id/tvproviderusername"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textColor="@android:color/white"
			android:textStyle="bold"/>
	    
	</RelativeLayout>
	
	<ScrollView android:layout_width="match_parent"
		android:layout_height="match_parent">
	
		<LinearLayout android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			
			<EditText android:id="@+id/etfirstname"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="15dp"
				android:layout_marginLeft="20dp"
				android:layout_marginRight="20dp"
				android:hint="@string/et_hint_firstname"
				android:inputType="text"/>
				
			<EditText android:id="@+id/etlastname"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="20dp"
				android:layout_marginRight="20dp"
				android:hint="@string/et_hint_lastname"
				android:inputType="text"/>
				
			<EditText android:id="@+id/etemailaddress"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="20dp"
				android:layout_marginRight="20dp"
				android:hint="@string/et_hint_emailaddress"
				android:inputType="text"/>
			
					
			<EditText android:id="@+id/etbirthdate"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="20dp"
				android:layout_marginRight="20dp"
				android:hint="@string/et_hint_birthdate"
				android:inputType="none"/>
			
			<EditText android:id="@+id/etgender"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="20dp"
				android:layout_marginRight="20dp"
				android:hint="@string/et_hint_gender"
				android:inputType="none"/>

			<Button android:id="@+id/btnsignup"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"				
				android:layout_marginTop="10dp"
				android:text="@string/btn_sign_up"
				android:layout_marginLeft="20dp"
				android:layout_marginRight="20dp"
				android:onClick="viewOnClick"
				android:background="@drawable/orange_button_background"/>
		
		</LinearLayout>
	
	</ScrollView>

</LinearLayout>