<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >
	
    <RelativeLayout android:layout_width="match_parent"
		android:layout_height="50dp"
		android:background="@drawable/navigation_bar">

		<TextView android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerInParent="true"
		    android:text="@string/tv_add_notifications"
		    android:textAppearance="?android:attr/textAppearanceLarge"
		    android:textColor="@android:color/white"
		    android:textStyle="bold"/>

		<Button android:id="@+id/btndone"
		    android:layout_width="wrap_content"
		    android:layout_height="33dp"
		    android:layout_alignParentRight="true"
		    android:layout_centerVertical="true"
		    android:layout_marginRight="10dp"
		    android:background="@drawable/nav_bar_button_blank"
		    android:paddingLeft="10dp"
		    android:paddingRight="10dp"
		    android:text="@string/btn_done"
		    android:textColor="@android:color/white"
		    android:textStyle="bold"/>
		
	</RelativeLayout>
	
   	<LinearLayout android:layout_width="match_parent"
   	    android:layout_height="match_parent"
   	    android:layout_weight="1"
   	    android:orientation="vertical">
   	    
   	    <TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:text="@string/tv_notify_me"
			android:textAppearance="?android:attr/textAppearanceMedium"/>
	
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:text="@string/tv_this_location"
			android:textAppearance="?android:attr/textAppearanceMedium"/>
   	    
   	</LinearLayout>
			    
	<kankan.wheel.widget.WheelView android:id="@+id/wvtimeframe"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="bottom"/>
	
</LinearLayout>