<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView android:id="@+id/tvresponse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:padding="@dimen/padding_medium"
        android:text="@string/hello_world"
        tools:context=".MainActivity" />

	<CheckBox android:id="@+id/cbagreetos"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/btnsignup"
	    android:layout_centerHorizontal="true"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:gravity="center"
	    android:text="@string/cb_agree_tos"/>

    <Button android:id="@+id/btnsignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnsignupfacebook"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_sign_up"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:onClick="signUp"/>

    <Button android:id="@+id/btnsignupfacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnsignuptwitter"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_sign_up_facebook"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:onClick="signUp"/>
    
	<Button android:id="@+id/btnsignuptwitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/btn_sign_up_twitter"
        android:onClick="signUp"/>

</RelativeLayout>
